# rez-packages

./: README.md
AL_USDMaya/0.29.4/: CMakeLists.txt  package.py
alembic/1.7.10/: CMakeLists.txt  package.py
boost/1.55.0/: CMakeLists.txt  package.py
boost/1.66.0/: CMakeLists.txt  package.py
cmake/3.10.0/: CMakeLists.txt
cmake/3.17.2/: CMakeLists.txt  package.py
gcc/4.8.5/: CMakeLists.txt  package.py
gcc/6.3.1/: package.py
glew/2.1.0/: CMakeLists.txt  package.py
glfw/3.0/: CMakeLists.txt  package.py
googletest/1.8.1/: CMakeLists.txt  package.py
hdf5/1.8.9/: CMakeLists.txt  package.py
ilmbase/2.2.0/: package.py
ilmbase/2.3.0/: CMakeLists.txt  package.py
maya/2018UPD2/: CMakeLists.txt  package.py
opencolorio/1.0.9/: CMakeLists.txt
opencolorio/1.1.0/: CMakeLists.txt  package.py
openexr/2.2.0/: CMakeLists.txt  package.py
openexr/2.3.0/: CMakeLists.txt  package.py
openimageio/1.8.17/: CMakeLists.txt  package.py
openimageio/2.0.5/: CMakeLists.txt  package.py
opensubdiv/3.0.5/: CMakeLists.txt  package.py
opensubdiv/3.3.3/: CMakeLists.txt  package.py
pip/18.1/: package.py
pip/20.1/: CMakeLists.txt  package.py
ptex/2.0.30/: CMakeLists.txt
ptex/2.0.41/: CMakeLists.txt  package.py
ptex/2.1.28/: CMakeLists.txt
pyilmbase/2.2.0/: CMakeLists.txt  package.py
pyilmbase/2.3.0/: package.py
pyqt/4.12.3/: CMakeLists.txt  package.py
pyqt/5.6/: CMakeLists.txt  package.py
pyside/1.2.4/: CMakeLists.txt  package.py
pyside2/5.6/: CMakeLists.txt  package.py
python/2.7.18/: CMakeLists.txt  package.py
python/2.7.5/: package.py
qt/4.8.6/: CMakeLists.txt  package.py
qt/5.12.8/: CMakeLists.txt  package.py
qt/5.6.3/: CMakeLists.txt  package.py
setuptools/40.6.3/: package.py
setuptools/46.2.0/: CMakeLists.txt  package.py
shiboken/1.2.4/: CMakeLists.txt  package.py
sip/4.18.1/: CMakeLists.txt  package.py
sip/4.19.13/: CMakeLists.txt  package.py
tbb/4.4.6/: CMakeLists.txt  install.py  package.py
usd/18.11/: CMakeLists.txt  package.py
usd/19.01/: CMakeLists.txt  package.py
usd_qt/0.1/: CMakeLists.txt  package.py
yaml_cpp/0.3.0/: CMakeLists.txt  package.py
yaml_cpp/0.5.3/: CMakeLists.txt  package.py
yaml_cpp/0.6.2/: package.py
